# BareDMG

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
include/: gbemu.h
include/core/: bus.h  cartridge.h  utils.h
src/: main.c
src/core/: CMakeLists.txt  bus.c  cartridge.c  utils.c
tests/: CMakeLists.txt  test_cartridge.c  test_cartridge_load.c  test_mmu.c  test_utils.c
